--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mern-graphql",
   "version": "1.0.0",
   "description": "A complete app in MERN stack+ GraphQL API",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js" 
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/meyash/MERN-GRAPHQL#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
