--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^15.1.0"
+    "graphql": "^15.1.0",
+    "mongoose": "^5.9.20"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
