--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.20"
   },
   "devDependencies": {
