--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern-graphql",
   "version": "1.0.0",
   "description": "A complete app in MERN stack+ GraphQL API",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -20,11 +20,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "dataloader": "^2.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^15.1.0",
+    "graphql": "^15.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.20"
+    "mongoose": "^5.9.21",
+    "react-chartjs": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
